Switched to firebase-admin sdk, so I could lock down my Realtime Database

--- a/twitch-tracker/functions/package.json
+++ b/twitch-tracker/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase": "^4.5.2",
-    "firebase-admin": "~5.2.1",
+    "firebase-admin": "^5.2.1",
     "firebase-functions": "^0.6.2",
     "lodash": "^4.17.4",
     "request": "^2.83.0",
