--- a/add-a-cat-to-that/requirements.txt
+++ b/add-a-cat-to-that/requirements.txt
@@ -12,10 +12,19 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+asn1crypto==0.24.0
+cbor2==4.1.2
+cffi==1.12.3
 Click==7.0
+cryptography==2.7
 Flask==1.0.3
+future==0.17.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Pillow==6.0.0
+pycparser==2.19
+pyOpenSSL==19.0.0
+six==1.12.0
+webauthn==0.4.5
 Werkzeug==0.15.4
